@@ -1,5 +1,7 @@
 Dec 07 2003  3.1.0  Tweaked prism2 packet mangling to preserve ICV on packets
                      that don't come in with a FCS set.
+                    Restored channel/card reports from server
+                    Fixed 802.11b freq-channel translation
 Dec 06 2003  3.1.0  Fixed Makefile looking for monitor/unmonitor scripts
                     Added viha registrant (oops)
                     Added most of the infrastructure for MadWifi support but
